# user_crud_model

./: README.md  pyproject.toml
user_model_assignment/: db.sqlite3  manage.py
user_model_assignment/model_app/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
user_model_assignment/model_app/migrations/: 0001_initial.py  0002_alter_customuser_options_and_more.py
user_model_assignment/user_model_assignment/: asgi.py  settings.py  urls.py  wsgi.py
